# iw1x-server

./: CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: default.yml  optiklink-build.yml  release.yml
src/: gsc.cpp  gsc.h  gsc_bots.cpp  gsc_curl.cpp  gsc_entity.cpp  gsc_exec.cpp  gsc_player.cpp  gsc_sqlite.cpp  gsc_utils.cpp  gsc_weapons.cpp  iw1x.cpp  iw1x.h  shared.h  shared.hpp  types.h
